# bacpipe-dashboard

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
outputs/2025-03-24/14-24-04/.hydra/: hydra.yaml
outputs/2025-03-24/15-29-49/.hydra/: hydra.yaml
outputs/2025-03-24/15-30-45/.hydra/: hydra.yaml
outputs/2025-03-24/15-40-46/.hydra/: hydra.yaml
outputs/2025-03-24/15-57-35/.hydra/: hydra.yaml
outputs/2025-03-24/16-00-01/.hydra/: hydra.yaml
outputs/2025-03-24/16-02-24/.hydra/: hydra.yaml
outputs/2025-03-24/16-16-00/.hydra/: hydra.yaml
outputs/2025-03-24/16-16-55/.hydra/: hydra.yaml
outputs/2025-03-24/16-18-13/.hydra/: hydra.yaml
outputs/2025-03-24/16-19-19/.hydra/: hydra.yaml
outputs/2025-03-24/16-29-30/.hydra/: hydra.yaml
outputs/2025-03-24/16-37-00/.hydra/: hydra.yaml
outputs/2025-03-24/16-37-24/.hydra/: hydra.yaml
outputs/2025-03-24/16-38-36/.hydra/: hydra.yaml
outputs/2025-03-24/16-50-14/.hydra/: hydra.yaml
outputs/2025-03-24/16-59-15/.hydra/: hydra.yaml
outputs/2025-03-24/17-01-56/.hydra/: hydra.yaml
outputs/2025-03-25/12-25-59/.hydra/: hydra.yaml
outputs/2025-03-25/12-39-29/.hydra/: hydra.yaml
outputs/2025-03-25/12-44-32/.hydra/: hydra.yaml
outputs/2025-03-25/12-45-08/.hydra/: hydra.yaml
outputs/2025-03-25/13-00-27/.hydra/: hydra.yaml
outputs/2025-03-25/13-01-19/.hydra/: hydra.yaml
outputs/2025-03-25/13-02-26/.hydra/: hydra.yaml
outputs/2025-03-25/13-12-31/.hydra/: hydra.yaml
outputs/2025-03-25/13-14-36/.hydra/: hydra.yaml
outputs/2025-03-25/13-20-11/.hydra/: hydra.yaml
outputs/2025-03-25/13-24-59/.hydra/: hydra.yaml
outputs/2025-03-25/13-33-15/.hydra/: hydra.yaml
outputs/2025-03-25/13-36-25/.hydra/: hydra.yaml
outputs/2025-03-25/13-41-04/.hydra/: hydra.yaml
outputs/2025-03-25/14-51-26/.hydra/: hydra.yaml
outputs/2025-03-25/14-53-43/.hydra/: hydra.yaml
outputs/2025-03-25/14-55-12/.hydra/: hydra.yaml
outputs/2025-03-25/14-56-39/.hydra/: hydra.yaml
outputs/2025-03-25/14-56-51/.hydra/: hydra.yaml
outputs/2025-03-25/14-57-07/.hydra/: hydra.yaml
outputs/2025-03-25/16-15-37/.hydra/: hydra.yaml
outputs/2025-03-25/16-20-07/.hydra/: hydra.yaml
src/: fine_tune_embeddings.py  main.py  proto_network.py
src/components/: caching.py  display.py  sidebar.py
src/tabs/: compare_tab.py  data_tab.py  fine_tune_tab.py  original_tab.py  proto_tab.py
src/utils/: data_utils.py  figures_utils.py  metrics.py  path_utils.py
(+13 files in other folders)
