[dependency-groups]
dev = [
  "deptry",
  "pre-commit"
]

[project]
authors = [
  {name = "benjamin cretois", email = "benjamin.cretois@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ",
  "hydra-core>=1.3.2",
  "plotly>=6.0.1",
  "scikit-learn>=1.6.1",
  "streamlit>=1.43.2",
  "llvmlite==0.43.0",
  "librosa==0.10.2.post1",
  "timm==1.0.13",
  "wget==3.2",
  "tflite==2.10.0",
  "resampy==0.4.3",
  "seaborn==0.13.2",
  "keras<3.0.0",
  "tensorflow==2.15.1",
  "ml-collections==1.0.0",
  "apache-beam==2.62.0",
  "ml-dtypes==0.3.2",
  "jax==0.4.33",
  "etils==1.9.4",
  "importlib-resources==6.4.5",
  "flax==0.10.0",
  "tensorflow-hub==0.16.1",
  "torchaudio==2.4.1",
  "lightning>=2.5.1",
  "easyfsl>=1.5.0",
]
description = ""
license = {text = "GPL-3.0+"}
name = "bacpipe-dashboard"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
