[dependency-groups]
dev = [
  "deptry",
  "pre-commit"
]

[project]
authors = [
  {name = "benjamin cretois", email = "benjamin.cretois@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ",
  "hydra-core>=1.3.2",
  "plotly>=6.0.1",
  "scikit-learn>=1.6.1",
  "streamlit>=1.43.2",
  "librosa==0.10.2.post1",
  "timm==1.0.13",
  "tensorflow==2.15.1",
  "ml-collections==1.0.0",
  "apache-beam==2.62.0",
  "jax==0.4.33",
  "etils==1.9.4",
  "flax==0.10.0",
  "tensorflow-hub==0.16.1",
  "torchaudio==2.4.1",
  "easyfsl>=1.5.0",
  "torch>=2.4.1",
  "numpy>=1.26.4",
  "scipy>=1.15.2",
  "pandas>=2.2.3",
  "matplotlib>=3.10.1",
  "torchmetrics>=1.7.0",
  "pytorch-lightning>=2.5.1",
  "tqdm>=4.67.1",
  "tf-keras>=2.15.1",
  "requests>=2.32.3",
  "omegaconf>=2.3.0",
  "soundfile>=0.13.1",
  "audioread>=3.0.1",
  "pyarrow>=16.1.0",
  "h5py>=3.13.0",
  "pyyaml>=6.0.2",
  "packaging>=24.2",
  "absl-py>=2.2.0",
  "streamlit-plotly-events>=0.0.6",
]
description = ""
license = {text = "GPL-3.0+"}
name = "bacpipe-dashboard"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
